[package]
name = "ninja_tools"
version = "0.1.0"
authors = ["makibishi <makibishi0212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-snippet = "0.6"
rand = "0.7.3"
num="0.2.1"
proptest = "0.10.1"
rand_chacha ="0.2.2"
rand_pcg="0.2.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false

[lib]
doctest = false
name = "ninja_tools"
path = "src/lib.rs"